--- a/style.css
+++ b/style.css
@@ -1,15 +1,32 @@
-
-body{
-    background-image: url(assets/bg-image.png);
-    background-color: #573824;
-    background-size: cover;
+:root {
+  font-family: "Alice", serif;
+  line-height: 150%;
+  color: #573A37;
+}
+body {
+  background-image: url(assets/bg-image.png);
+  background-color: #573824;
+  background-size: cover;
 }
 
-#page{
-    box-sizing: border-box;
-    padding: 24px;
-    width: 800px;
-    background-color: #F0E8C2;
-    border-radius: 24px;
-    margin: 48px auto;
+#page {
+  box-sizing: border-box;
+  padding: 24px;
+  width: 800px;
+  background-color: #f0e8c2;
+  border-radius: 24px;
+  margin: 48px auto;
+}
+
+h1 {
+  line-height: 140%;
+  font-size: 40px;
+}
+h2 {
+  font-size: 24px;
+}
+
+h1,
+h2 {
+  color: #291b1a;
 }
