--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 :root {
   font-family: "Alice", serif;
   line-height: 150%;
-  color: #573A37;
+  color: #573a37;
 }
 body {
   background-image: url(assets/bg-image.png);
@@ -17,10 +22,21 @@ body {
   border-radius: 24px;
   margin: 48px auto;
 }
+section + section{
+    margin-top: 24px;
+}
 
+
+main {
+  padding: 24px;
+}
+#about p + p {
+  margin-top: 12px;
+}
 h1 {
   line-height: 140%;
   font-size: 40px;
+  margin-bottom: 4px;
 }
 h2 {
   font-size: 24px;
@@ -29,4 +45,10 @@ h2 {
 h1,
 h2 {
   color: #291b1a;
+  margin-top: 4px;
+  line-height: 150%;
+}
+
+ul{
+    padding-left: 24px;
 }
